# mini_alpha

mini-alpha-studio/: CMakeLists.txt  imgui.ini
mini-alpha-studio/include/: csv.hpp  model.hpp  optimize.hpp  strategy.hpp
mini-alpha-studio/reports/: run.csv  run.html
mini-alpha-studio/sample_data/: AAPL_5Y.csv  MSFT_5Y.csv  NVDA_5Y.csv  TSLA_5Y.csv  testmin.csv
mini-alpha-studio/src/: backtest.cpp  csv.cpp  main_gui.cpp  optimize.cpp  streamer_pi.cpp
